-PJVM8 works also, fixes that would have broken the JVM8 compilations